Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
         const maxRetries = 3;
         
         // Hidden default stream URL - not visible in UI
-        const defaultStreamUrl ='http://myott.to:8080/live/1510171649/9583275423/233178.m3u8';
+        const defaultStreamUrl ='https://myott.to:8080/live/1510171649/9583275423/233178.m3u8';
 ';
 
         // Initialize
@@ -1354,4 +1354,5 @@
     </script>
 </body>
 </html>
+
 
