Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -786,8 +786,8 @@
         const maxRetries = 3;
         
         // Hidden default stream URL - not visible in UI
-        const defaultStreamUrl ='https://saseries.akamaized.net/hls/live/2110097/tappak/master.m3u8?hdnts=exp=1765981142~acl=/hls/*~hmac=58729f5c591867d4673a907a755c6db36a6b68020ab7575ed3ff1f3bd673361f';
-';
+        const defaultStreamUrl = https: https: 'https://aps13.playlist.ttvnw.net/v1/playlist/Cs8G6BlwUrcqLcexpoRaaJDP4ePxI6Bhy5ct830QZhMm9dBoWYqvTueGjYz9DHt59ySqyQGrTrMMzsqvnY30rwRL_Y36EOSDnkB_KhhpJtpotBCC6yyGXwm7XxvOvtKBlMnnmEmSxnUh1Q2MCjni8QVth9qhfxa3st7tDMc0mUu2WWLo-VHJCfzssS9MYDjrdEdSbLNcMk1MUsOhB50EIZsosbx92wmLDBoHdowryWAvhELn2qopCgU3fgr2W8bHwcI6SICpFack-q91u0Lu6oa2CrfhRamFJbnqjmRF9eoTIofikkXELNMJmXRuBfhq5EpaSVln8ZLbpS2RX_mZ95RI5j0Jr-3PBrhGRFy8bjVkEIPcqR5et-ZwtMQjI6YN5eoKz71biJBSpiH6i7dDzBRCPuEh0FUf8HsuL6M8mQaoUeCGNmSYV44-pDZO4ktfq0r7fhnGEQwso6ZfpJQA0dobDxuPBxe_TjvHGClo59pxw-CdEMjymVfGZT1TSFghrVkEQfoNCO6kHR3qJua96Ma1Bl62i4hck5kLrAF-qId1FECR8laok0MEGcca6Ju33R5ODARxXNZ83wnGv1CkdtrNrpmnnF96_UBLvlY_NbysW45hpDdvEFtYsPxkBVi4u5mGft5oFBL0ZyNTuq_J666_ITmSRnet776ofylYFK5fYKsrG63cihkUfzmBLse96pjCQh9hRceVuzM_bZAOWxPQEAJxj7oT6ivfmsRzZ8FGi-2aW5vVRs-ERiJBbBGq3IoGgke-oVhIHWE8VihVnjqKbDHhB7wJxqGjk8weRzraxBUjh-s7HD1x0GQBZ_cGIkUY7sTDUAUokQN7KJ6rzB7CSkAuBuk5GjyZRmbQZwXl3i8SSz6xy5EppuuI8sfnZI7lu1_rs1Jtu15M6hAHXZoTO4Jo1Tpr3sJc4CifAnnk4QQXx6dk0519ozzvEbGDxVnZyVYeFmTf5_eFbTtCvApi92a3XVpbTSfWyOeHIbGQShXNiVetednmoP_UTn53H_Fgd3aqOECSmbDnkTAJFKj0w-uP13Oq0QKgvN36DF7-LKTTHwgbpb3U_Wsb7uWPs32q1ZJg6CnFJwmlgsikx4_gncuGAi1u0Vzhc_-22iOQZRoMkw59Xj8m51QNUFM1IAEqCXVzLXdlc3QtMjD7DQ.m3u8';
+
 
         // Initialize
         function init() {
@@ -1354,6 +1354,3 @@
     </script>
 </body>
 </html>
-
-
-
